example/tests/compile_errors/03_bad_field.stderr
error: autoroute macro failed: unexpected method, should be one of: GET, POST, DELETE, PUT, PATCH, CONNECT, OPTIONS, HEAD, TRACE
 --> tests/compile_errors/03_bad_field.rs:3:1
  |
3 | #[autoroute]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `autoroute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: autoroute macro failed: unexpected method, should be one of: GET, POST, DELETE, PUT, PATCH, CONNECT, OPTIONS, HEAD, TRACE
 --> tests/compile_errors/03_bad_field.rs:6:1
  |
6 | #[autoroute()]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `autoroute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: autoroute macro failed: expected `,`
 --> tests/compile_errors/03_bad_field.rs:9:1
  |
9 | #[autoroute(GET)]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `autoroute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: autoroute macro failed: unexpected method, should be one of: GET, POST, DELETE, PUT, PATCH, CONNECT, OPTIONS, HEAD, TRACE
  --> tests/compile_errors/03_bad_field.rs:12:13
   |
12 | #[autoroute(path="/home")]
   |             ^^^^

error: autoroute macro failed: expected `,`
  --> tests/compile_errors/03_bad_field.rs:15:17
   |
15 | #[autoroute(GET path)]
   |                 ^^^^

error: autoroute macro failed: expected `=`
  --> tests/compile_errors/03_bad_field.rs:18:1
   |
18 | #[autoroute(GET, path)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `autoroute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: autoroute macro failed: unexpected end of input, expected string literal
  --> tests/compile_errors/03_bad_field.rs:21:1
   |
21 | #[autoroute(GET, path=)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `autoroute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: autoroute macro failed: no responses defined
  --> tests/compile_errors/03_bad_field.rs:24:1
   |
24 | #[autoroute(GET, path="/home")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `autoroute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: autoroute macro failed: expected `=`
  --> tests/compile_errors/03_bad_field.rs:27:1
   |
27 | #[autoroute(GET, path="/home", responses)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `autoroute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: autoroute macro failed: expected `=`
  --> tests/compile_errors/03_bad_field.rs:30:41
   |
30 | #[autoroute(GET, path="/home", responses[])]
   |                                         ^

error: autoroute macro failed: unexpected end of input, expected square brackets
  --> tests/compile_errors/03_bad_field.rs:33:1
   |
33 | #[autoroute(GET, path="/home", responses=)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `autoroute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: autoroute macro failed: at least one response is required
  --> tests/compile_errors/03_bad_field.rs:36:32
   |
36 | #[autoroute(GET, path="/home", responses=[])]
   |                                ^^^^^^^^^

error: autoroute macro failed: expected one of: responses, tags
  --> tests/compile_errors/03_bad_field.rs:39:32
   |
39 | #[autoroute(GET, path="/home", unknown="test")]
   |                                ^^^^^^^
